--- a/publi_digital.html
+++ b/publi_digital.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EchoCreativa - Publicidad Digital y Redes Sociales</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="C:\Users\Josue\Documents\EchoPage3\icon.png">
+  <link rel="icon" href="icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <style>
@@ -60,7 +60,7 @@
 
   <nav class="bg-431a60 text-white px-6 py-4 flex justify-between items-center relative">
     <a href="index.html" class="flex items-center">
-      <img src="C:\Users\Josue\Documents\EchoPage3\logox.png" alt="Echo Creativa Logo" class="h-9">
+      <img src="logox.png" alt="Echo Creativa Logo" class="h-9">
     </a>
     <button id="menu-btn" class="lg:hidden block focus:outline-none text-2xl">☰</button>
     <ul id="menu" class="hidden lg:flex space-x-6 font-semibold">
@@ -197,4 +197,5 @@
     });
   </script>
 </body>
+
 </html>
